--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
 </section>
 <footer>
     <div class="footer-container">
+        <div class="logo-img">
+            <img src="assets/images/LOGO.jpg" alt="Logo CGN" class="logo-img">
+        </div>
+
         <div class="footer-links">
             <div class="footer-column">
                 <h4>Navigation</h4>
@@ -363,5 +367,4 @@
 
     <script src="assets/js/script.js"></script>
 </body>
-
 </html>
