--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 <footer>
     <div class="footer-container">
         <div class="logo-img">
-            <img src="assets/images/LOGO.jpg" alt="Logo CGN" class="logo-img">
+            <img src="assets/images/logo.jpg" alt="logo" class="logo-img">
         </div>
 
         <div class="footer-links">
@@ -368,3 +368,4 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
