--- a/index.html
+++ b/index.html
@@ -366,6 +366,10 @@
 </div>
 
     <script src="assets/js/script.js"></script>
+    <script>
+  lucide.createIcons();
+</script>
 </body>
 </html>
+
 
