--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <div class="logo">
             <a href="#accueil">cece_gilbert_nonamou</a> 
         </div>
+        
+<button class="mobile-menu-btn" aria-label="Ouvrir le menu">
+    <i data-lucide="menu"></i>
+</button>
+
 <ul class="nav-links">
     <li><a href="#parcours">Parcours</a></li>
     <li><a href="#portfolio">Projets</a></li>
