--- a/index.html
+++ b/index.html
@@ -316,21 +316,26 @@
             </div>
         </div>
 
-        <form class="contact-form">
-            <div class="form-group">
-                <label>Nom Complet</label>
-                <input type="text" placeholder="Ex: Jean Dupont">
-            </div>
-            <div class="form-group">
-                <label>Email</label>
-                <input type="email" placeholder="exemple@mail.com">
-            </div>
-            <div class="form-group">
-                <label>Message</label>
-                <textarea rows="4" placeholder="Votre message..."></textarea>
-            </div>
-            <button type="submit" class="btn-primary">Envoyer</button>
-        </form>
+<form action="https://formspree.io/f/ton_identifiant" method="POST" class="contact-form">
+    
+    <div class="form-group">
+        <label>Nom Complet</label>
+        <input type="text" name="name" placeholder="Ex: Jean Dupont" required>
+    </div>
+
+    <div class="form-group">
+        <label>Email</label>
+        <input type="email" name="email" placeholder="exemple@mail.com" required>
+    </div>
+
+    <div class="form-group">
+        <label>Message</label>
+        <textarea name="message" rows="4" placeholder="Votre message..." required></textarea>
+    </div>
+
+    <button type="submit" class="btn-primary">Envoyer</button>
+
+</form>
     </div>
 </section>
 <footer>
@@ -374,3 +379,4 @@
     
 </body>
 </html>
+
